tests/data/annotations/mergeable/annotations-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: annotations-ingress-master
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
spec:
  rules:
  - host: annotations.example.com
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: annotations-ingress-backend1-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
  - host: annotations.example.com
    http:
      paths:
      - path: /backend1
        backend:
          serviceName: backend1-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: annotations-ingress-backend2-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
  - host: annotations.example.com
    http:
      paths:
      - path: /backend2
        backend:
          serviceName: backend2-svc
          servicePort: 80
