tests/data/annotations/mergeable/master-http2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: annotations-ingress-master
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
    nginx.org/http2: "true"
spec:
  rules:
  - host: annotations.example.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: annotations-ingress-backend1-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/http2: "false"
spec:
  rules:
  - host: annotations.example.com
    http:
      paths:
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: annotations-ingress-backend2-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
  - host: annotations.example.com
    http:
      paths:
      - path: /backend2
        pathType: Prefix
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
