tests/data/annotations/mergeable/minion-annotations-differ.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: annotations-ingress-master
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
    nginx.org/proxy-send-timeout: "10s"
    nginx.org/max-conns: "108"
    nginx.org/proxy-set-headers: "X-Forwarded-ABC"
spec:
  rules:
  - host: annotations.example.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: annotations-ingress-backend1-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/proxy-send-timeout: "25s"
    nginx.org/max-conns: "1048"
    nginx.org/proxy-set-headers: "X-Forwarded-ABC minionA"
spec:
  rules:
  - host: annotations.example.com
    http:
      paths:
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: annotations-ingress-backend2-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/proxy-send-timeout: "33s"
    nginx.org/max-conns: "1024"
    nginx.org/proxy-set-headers: "X-Forwarded-ABC minionB"
spec:
  rules:
  - host: annotations.example.com
    http:
      paths:
      - path: /backend2
        pathType: Prefix
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
